# sdr-playground

./: AGENTS.md  Cargo.toml  README.md  mise.toml
.agents/skills/gpui-component/: SKILL.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  colormap.rs  controls.rs  main.rs  nav.rs  radio.rs  settings.rs  signal.rs  store.rs
crates/app/src/components/: frequency.rs  level_meter.rs  mod.rs  title_bar.rs  transport_bar.rs
crates/app/src/ui/: device_header.rs  dropdown.rs  field.rs  icon_button.rs  knob.rs  meter.rs  mod.rs  segmented.rs  surface.rs  tabs.rs  theme.rs  tokens.rs  value_box.rs
crates/app/src/workspaces/: library.rs  listen.rs  mod.rs  recordings.rs  settings.rs
crates/cli/: Cargo.toml
crates/cli/src/: format.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  source.rs
crates/decode/: Cargo.toml
crates/decode/src/: lib.rs
crates/decode/src/rds/: demod.rs  group.rs  mod.rs  sync.rs  text.rs  types.rs
crates/device/: Cargo.toml
crates/device/src/: convert.rs  file.rs  lib.rs  rtlsdr.rs
crates/device/tests/: device_smoke.rs
crates/device/tests/fixtures/: tone.cu8
crates/dsp/: Cargo.toml
crates/dsp/src/: fft.rs  fir.rs  fm.rs  lib.rs  mixer.rs  pll.rs  spectrum.rs  window.rs
crates/engine/: Cargo.toml
crates/engine/benches/: decode.rs
crates/engine/src/: channel.rs  frame.rs  lib.rs  snapshot.rs
crates/engine/tests/: file_pipeline.rs  live.rs  rds_fixture.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: band.rs  lib.rs  main.rs  scan.rs  store.rs  tui.rs
docs/: ARCHITECTURE.md  UI.md  VISION.md
docs/style-refs/: ableton.html  functional.html  hardware.html  index.html  instrument.html  linear.html  native.html  signal.js  terminal.html
