[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/dsp",
    "crates/device",
    "crates/decode",
    "crates/engine",
    "crates/app",
    "crates/cli",
    "crates/scanner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
# Internal crates. Dependency direction points inward (see docs/ARCHITECTURE.md):
# core <- dsp/device/decode <- engine <- {app, cli}.
sdr-core = { path = "crates/core" }
sdr-dsp = { path = "crates/dsp" }
sdr-device = { path = "crates/device" }
sdr-decode = { path = "crates/decode" }
sdr-engine = { path = "crates/engine" }

# DSP. rustfft re-exports num-complex 0.4, the same `Complex<f32>` as `core::Iq`, so the
# sample type stays consistent across the stack with no conversion.
rustfft = "6.4"

# Used by the app to build the waterfall texture (RenderImage wraps image::Frame). Pinned to
# the versions gpui resolves so the Frame type unifies.
image = "0.25"

# App-side persistence: UI/session settings in an embedded KV store under the platform
# app-support dir, serialized with serde. SQLite is reserved for the future bookmarks/events
# tables (see docs/UI.md).
redb = "4.1.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# GPUI + gpui-component.
#
# gpui-component declares its `gpui` deps against zed's *default branch* (no rev). We must
# use that same unpinned source here so cargo resolves a single gpui (a rev pin would not
# unify with gpui-component's branch source, producing two incompatible copies). The exact
# zed commit is pinned in Cargo.lock — kept at the commit gpui-component builds against
# (its own Cargo.lock), currently 4bee412118dafea3bbd491cd044d354f16b3d665. To move it:
#   cargo update -p gpui --precise <zed-sha>
# Bump it together with the gpui-component rev below.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "6dfb32cd2c5e1bd6f86ce758398580f42d49970f" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "6dfb32cd2c5e1bd6f86ce758398580f42d49970f" }

# The DSP/decode crates run tight per-sample loops (NCO mixing, FIR decimation, FM and RDS
# demodulation). At opt-level 0 a single channel only just reaches realtime, so the scanner
# (several channels per window) cannot keep up and the decode tests take ~48s. Optimizing
# just these small, rarely-step-debugged crates lets one core decode ~19 stations in realtime;
# the app/UI crates stay at the default for fast compiles and easy debugging.
[profile.dev.package.sdr-dsp]
opt-level = 2
[profile.dev.package.sdr-decode]
opt-level = 2
[profile.dev.package.sdr-engine]
opt-level = 2

# `cargo test` builds the crate under test with the `test` profile (not `dev`), and per-package
# `dev` overrides do not carry over. The heavy tests live in `sdr-decode`, so it needs this too;
# its `sdr-dsp` dependency is still built with the `dev` profile above.
[profile.test.package.sdr-decode]
opt-level = 2
