[package]
name = "sdr-app"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sdr-engine.workspace = true

gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
image.workspace = true
redb.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
